# file_processor_drf

./: .env-docker  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yaml
config/: celery.py  settings.py  urls.py
docker/: app.sh  celery.sh
files/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
files/migrations/: 0001_initial.py  0002_file_processed_at.py
files/templates/: home.html
